<?xml version="1.0"?>
<package>
  <name>human_msgs</name>
  <version>1.0.0</version>
  <description>The human_msgs package</description>

  <maintainer email="fxj345@cs.bham.ac.uk">Ferdian Jovan</maintainer>

  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/human_msgs</url> -->

  <author email="l.kunze@cs.bham.ac.uk">Lars Kunze</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export/>
</package>
