<?xml version="1.0"?>
<package>
  <name>human_trajectory_analyzer</name>
  <version>0.0.1</version>
  <description>The human_trajectory_analyzer package</description>

  <maintainer email="lars@todo.todo">lars</maintainer>

  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/human_trajectory_analyzer</url> -->

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>
</package>
